--- a/hardware/a10_fpr/flat.qsf
+++ b/hardware/a10_fpr/flat.qsf
@@ -57,15 +57,30 @@ set_global_assignment -name AUTO_GLOBAL_REGISTER_CONTROLS OFF
 set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|config_clk~pad
 set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|pll_ref_clk~pad
 set_instance_assignment -name GLOBAL_SIGNAL          OFF -to board_inst|mem|ddr4|ddr4a|arch|arch_inst|oct_inst|cal_oct.manual_oct_cal.r_clkdiv
-set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|kernel_clk_gen|kernel_clk_gen|kernel_pll|altera_pll_i|twentynm_pll|outclk[0]
-set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|kernel_clk_gen|kernel_clk_gen|kernel_pll|altera_pll_i|twentynm_pll|outclk[1]
+
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[0]
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[1]
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[2]
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[3]
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[4]
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[5]
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[6]
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to board_inst|acl_kernel_clk_a10_mod|acl_kernel_clk_a10_mod_0|kernel_pll|altera_pll_i|twentynm_pll|outclk[7]
+
 set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to *ALTERA_INSERTED_OSCILLATOR_FOR_IOPLL*
 
 # Resets
 set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to freeze_wrapper_inst|kernel_system_clock_reset_reset_reset_n
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to freeze_wrapper_inst_1|kernel_system_clock_reset_reset_reset_n
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to freeze_wrapper_inst_2|kernel_system_clock_reset_reset_reset_n
+set_instance_assignment -name GLOBAL_SIGNAL GLOBAL_CLOCK -to freeze_wrapper_inst_3|kernel_system_clock_reset_reset_reset_n
+
 
 # This setting indicates that the global signal will be frozen high during PR by user logic (implemented in the freeze_wrapper)
 set_instance_assignment -name PR_ALLOW_GLOBAL_LIMS ON -to freeze_wrapper_inst|kernel_system_clock_reset_reset_reset_n
+set_instance_assignment -name PR_ALLOW_GLOBAL_LIMS ON -to freeze_wrapper_inst_1|kernel_system_clock_reset_reset_reset_n
+set_instance_assignment -name PR_ALLOW_GLOBAL_LIMS ON -to freeze_wrapper_inst_2|kernel_system_clock_reset_reset_reset_n
+set_instance_assignment -name PR_ALLOW_GLOBAL_LIMS ON -to freeze_wrapper_inst_3|kernel_system_clock_reset_reset_reset_n
 
 #============================================================
 # Synthesis and Fitter Fine-Tuning
@@ -78,7 +93,7 @@ set_global_assignment -name OPTIMIZE_HOLD_TIMING "ALL PATHS"
 set_global_assignment -name OPTIMIZATION_TECHNIQUE SPEED
 set_global_assignment -name ALLOW_SHIFT_REGISTER_MERGING_ACROSS_HIERARCHIES OFF
 set_global_assignment -name DISABLE_REGISTER_MERGING_ACROSS_HIERARCHIES ON
-set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Pro Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Pro Edition"
 set_instance_assignment -name AUTO_SHIFT_REGISTER_RECOGNITION OFF -to board_inst|*pipe_stage_*
 set_global_assignment -name ENABLE_PR_PINS OFF
 set_global_assignment -name ENABLE_INIT_DONE_OUTPUT OFF
@@ -406,3 +421,9 @@ set_location_assignment PIN_AD34 -to mem_dq[63]
 set_location_assignment PIN_AF33 -to mem_dqs[7]
 set_location_assignment PIN_AF34 -to mem_dqs_n[7]
 
+
+set_global_assignment -name SOURCE_TCL_SCRIPT_FILE ip_include.tcl
+
+set_instance_assignment -name AUTO_SHIFT_REGISTER_RECOGNITION OFF -to *_NO_SHIFT_REG*
+
+set_global_assignment -name VERILOG_CONSTANT_LOOP_LIMIT 10000
